examples/k8stest/conf/HTTPRoute/Backend/LBPolicy/Service_default_lb-rr-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-rr-test-service
  namespace: edgion-default
spec:
  selector:
    app: edgion-test-server
  ports:
    - port: 8080
      targetPort: 30001
      protocol: TCP
