examples/k8stest/conf/HTTPRoute/Backend/LBPolicy/Gateway.yaml
# LB Policy  Gateway
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lb-policy-gateway
  namespace: edgion-test
spec:
  gatewayClassName: public-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 31120
